# portfolio-optimizer

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  sonar-project.properties
.github/workflows/: build.yml  cmake.yml  codeql-analysis.yml  sonar.yml
cmake/: clang-tidy.cmake  googletest.cmake  libassert.cmake  nlohmann-json.cmake
data/: assets.csv  market.csv  pairs.csv  portfolio.csv
data/misc/: market.csv  portfolio.csv
data/test/: VOO.csv
doc/: notes.txt
lib/: Asset.cpp  Asset.hpp  AssetEnums.hpp  AssetInfo.cpp  AssetInfo.hpp  AssetRatio.cpp  AssetRatio.hpp  CMakeLists.txt  CsvFile.cpp  CsvFile.hpp  EnumUtils.cpp  EnumUtils.hpp  EtradePortfolio.cpp  EtradePortfolio.hpp  FilePath.hpp  Market.cpp  Market.hpp  Ohlc.cpp  Ohlc.hpp  OhlcEnums.hpp  OhlcList.cpp  OhlcList.hpp  Portfolio.cpp  Portfolio.hpp  TimePoint.hpp  Utils.cpp  Utils.hpp  asset.cpp  asset.hpp  assetenums.hpp  assetinfo.cpp  assetinfo.hpp  assetratio.cpp  assetratio.hpp  csvfile.cpp  csvfile.hpp  enumutils.cpp  enumutils.hpp  market.cpp  market.hpp  (+8 more)
output/: .gitignore
script/: build.sh  clang-format.sh  clang-tidy.sh  cmake-format.sh  download-yf.py  format.sh
src/: CMakeLists.txt  arbitrage.cpp  market-info.cpp  percent-ath.cpp  portfolio-info.cpp  retirement-calculator.cpp  risk-return-optimizer.cpp  simple-risk-return.cpp  two-asset-optimizer.cpp
test/: AssetTest.cpp  CMakeLists.txt  OhlcListTest.cpp  PortfolioTest.cpp  UtilsTest.cpp
